--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "clsx": "latest",
     "moment": "^2.29.1",
     "next": "^10.1.3",
+    "next-pwa": "^5.2.13",
     "prop-types": "latest",
     "react": "latest",
     "react-dom": "latest",
